style: updated font
- changed blockquote font to serif
- changed font to serif in certain text heavy pages

--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -107,5 +107,7 @@ const postImage = await getImage({ src: post.data.image, format: "webp" });
 			</A>
 		</figcaption>
 	</figure>
-	<Content />
+	<article class="font-serif">
+		<Content />
+	</article>
 </Layout>
