--- a/src/pages/policy/[slug].astro
+++ b/src/pages/policy/[slug].astro
@@ -44,5 +44,7 @@ const { Content } = await render(policy);
 			Last updated on <strong>{policy.data.updated?.toDateString()}</strong>
 		</p>
 	</div>
-	<Content />
+	<article class="font-serif">
+		<Content />
+	</article>
 </Layout>
