fix: home page text

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -123,7 +123,7 @@ const quote = quotes[Math.floor(Math.random() * quotes.length)];
 				title="Resume"
 				target={"_blank"}
 			>
-				Download the latest copy of my Resume.
+				Resume: Download latest version
 			</A>
 		</p>
 		<div class="~space-y-4/8">
