--- a/src/pages/license/index.astro
+++ b/src/pages/license/index.astro
@@ -64,6 +64,73 @@ const license = await getCollection("license");
 		}
 	</ul>
 
+	<h2>Overview of GNU Public License</h2>
+	<p>
+		Nobody should be restricted by the software they use. There are four
+		freedoms that every user should have:
+	</p>
+
+	<ul>
+		<li>the freedom to use the software for any purpose,</li>
+		<li>the freedom to change the software to suit your needs,</li>
+		<li>
+			the freedom to share the software with your friends and neighbors, and
+		</li>
+		<li>the freedom to share the changes you make.</li>
+	</ul>
+
+	<p>
+		When a program offers users all of these freedoms, we call it <A
+			href="https://www.gnu.org/philosophy/free-sw.html"
+			target="_blank"
+			title="What is Free Software?">free software</A
+		>.
+	</p>
+
+	<p>
+		Developers who write software can release it under the terms of the GNU GPL.
+		When they do, it will be free software and stay free software, no matter who
+		changes or distributes the program. We call this copyleft: the software is
+		copyrighted, but instead of using those rights to restrict users like
+		proprietary software does, we use them to ensure that every user has
+		freedom.
+	</p>
+
+	<h3>The GNU Affero General Public License</h3>
+
+	<p>
+		The GNU Affero General Public License is based on the GNU GPL, but has an
+		additional term to allow users who interact with the licensed software over
+		a network to receive the source for that program. We recommend that people
+		consider using the GNU AGPL for any software which will commonly be run over
+		a network. The latest version is version 3.
+	</p>
+
+	<p>
+		The GNU Affero General Public License text is available in various formats,
+		which can be viewed <A
+			href="https://www.gnu.org/licenses/agpl-3.0.en.html"
+			title="GNU Affero General Public License - GNU Project">here.</A
+		>
+		These documents are not formatted for standalone publishing, and are intended
+		to be included in another document.
+	</p>
+
+	<h3>Why the Affero GPL?</h3>
+
+	<p>
+		The GNU Affero General Public License is a modified version of the ordinary
+		GNU GPL version 3. It has one added requirement: if you run a modified
+		program on a server and let other users communicate with it there, your
+		server must also allow them to download the source code corresponding to the
+		modified version running there.
+	</p>
+
+	<p>
+		The purpose of the GNU Affero GPL is to prevent a problem that affects
+		developers of free programs that are often used on servers.
+	</p>
+
 	<h2>Overview of Creative Commons</h2>
 
 	<p>
