style: improved text legibility for links

--- a/src/components/A.astro
+++ b/src/components/A.astro
@@ -33,7 +33,7 @@ const { href, title, target, css } = Astro.props;
 	title={title}
 	target={target}
 >
-	<span class="z-50">
+	<span class="z-50 group-hover:invert dark:group-hover:invert-0">
 		<slot />
 	</span>
 	<span
