feat: final profile page

--- a/src/pages/profile/index.astro
+++ b/src/pages/profile/index.astro
@@ -107,6 +107,60 @@ const translations = [
 				<A href="/quotes" title="Portfolio - Quotes">Quotes</A>
 			</span>
 		</div>
+		<h3>Profile</h3>
+		<ol>
+			<li>
+				Working with Software Businesses
+				<ul>
+					<li>
+						Scaled businesses successfully, emphasizing customer-centric
+						decisions
+					</li>
+					<li>
+						Excel in executing ambitious projects and relying on data for
+						decisions
+					</li>
+				</ul>
+			</li>
+
+			<li>
+				Working with Product Teams
+
+				<ul>
+					<li>
+						Align, contribute to, and grow product teams (10 to 100 people)
+					</li>
+					<li>
+						Fluent in technical and executive languages, crafting narratives for
+						inspiration
+					</li>
+					<li>Significantly contribute to project outcomes</li>
+				</ul>
+			</li>
+
+			<li>
+				Continuous Improvement
+
+				<ul>
+					<li>Dedicated to personal and professional growth</li>
+					<li>
+						Constant learning, omposure in adversity, and high-quality
+						decision-making
+					</li>
+				</ul>
+			</li>
+
+			<li>
+				Networking and Collaboration
+
+				<ul>
+					<li>
+						Enjoy meeting fellow developers and discussing emerging technologies
+					</li>
+				</ul>
+			</li>
+		</ol>
+
 		<h3>More about me</h3>
 		<p>
 			Many people are curious about my name and what it means. So here is your
@@ -145,5 +199,9 @@ const translations = [
 				}
 			</tbody>
 		</table>
+		<p>
+			Connect for discussions on programming, emerging tech, or software product
+			creation. Let's code and innovate together!
+		</p>
 	</article>
 </Layout>
