refactor: moved policy pages to active development

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -34,7 +34,7 @@ import A from "@/components/A.astro";
 		>
 			Naparajith T L
 		</A>.
-		<A href={"/policy"} title={"Site Policy"}>Policy</A>
+		<!-- <A href={"/policy"} title={"Site Policy"}>Policy</A> -->
 		<A href={"/license"} title={"License"}>License</A>
 	</p>
 </footer>
