--- a/src/pages/policy/index.astro
+++ b/src/pages/policy/index.astro
@@ -32,6 +32,7 @@ const policies = await getCollection("policy");
 	description="The official Policy page for Naparajith's Portfolio. Contains a comprehensive list of all policies applicable to this site."
 >
 	<main>
+		Page under active development
 		<ul>
 			{
 				policies.map((policy) => (
