fix: profile page content

--- a/src/pages/profile/index.astro
+++ b/src/pages/profile/index.astro
@@ -43,7 +43,7 @@ const translations = [
 	description="The official profile page for T L Naparajith, a Software Engineer from India"
 >
 	<article>
-		<h3>Who am I?</h3>
+		<h3>Who I am</h3>
 		<p>
 			I am Naparajith, a Software Quality Engineer from India. I am passionate
 			about solving coding challenges, simple and complex everyday problems and
@@ -107,7 +107,7 @@ const translations = [
 				<A href="/quotes" title="Portfolio - Quotes">Quotes</A>
 			</span>
 		</div>
-		<h3>Profile</h3>
+		<h3>What I do</h3>
 		<ol>
 			<li>
 				Working with Software Businesses
