--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -92,8 +92,9 @@ const quote = quotes[Math.floor(Math.random() * quotes.length)];
 	>
 		<A href="/profile" title="Profile">Profile</A>
 		<A href="/quick-view" title="Quick View"> Quick View </A>
+		<A href="/contact" title="Contact"> Contact </A>
 		<A href="/blog" title="Blog">Blog</A>
-		<A href="/quotes" title="Quotes">Quotes</A>
+		<!-- <A href="/quotes" title="Quotes">Quotes</A> -->
 		<A
 			href={"https://github.com/DrInfinite"}
 			title={`GitHub - DrInfinite`}
