fix: profile page
- Updated Profile Page Content
- Updated Home Page content to reflect Profile Page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -80,9 +80,8 @@ const quote = quotes[Math.floor(Math.random() * quotes.length)];
 		</figure>
 		<p>
 			<strong>
-				As a software engineer committed to solving simple and complex everyday
-				problems, I am dedicated to deepening my expertise in every technology
-				that drives software excellence.
+				A SDET committed to solving problems, I am dedicated to deepening my
+				expertise in every technology that drives software excellence.
 			</strong>
 		</p>
 	</article>
