--- a/src/pages/profile/index.astro
+++ b/src/pages/profile/index.astro
@@ -45,9 +45,10 @@ const translations = [
 	<article>
 		<h3>Who I am</h3>
 		<p>
-			I am Naparajith, a Software Quality Engineer from India. I am passionate
-			about solving coding challenges, simple and complex everyday problems and
-			leveraging technology to better the lives of the people around me.
+			I am Naparajith, a Software Development Engineer in Test from India. I am
+			passionate about solving coding challenges, simple and complex everyday
+			problems and leveraging technology to better the lives of the people
+			around me.
 		</p>
 		<p>
 			My career spans software development, engineering, quality assurance, test
