refactor: added a contact section to the footer

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -36,5 +36,6 @@ import A from "@/components/A.astro";
 		</A>.
 		<!-- <A href={"/policy"} title={"Site Policy"}>Policy</A> -->
 		<A href={"/license"} title={"License"}>License</A>
+		<A href={"/contact"} title={"contact"}>Contact</A>
 	</p>
 </footer>
