--- a/src/pages/quick-view/index.astro
+++ b/src/pages/quick-view/index.astro
@@ -99,7 +99,7 @@ const updated_at = new Date((await GithubProfile()).updated_at).toDateString();
 						</div>
 						<small class="font-normal">
 							<u class="block md:hidden">Updated On</u>
-							<span class="hidden md:inline">Updated On:</span>
+							<u class="hidden md:inline">Updated On:</u>
 							{updated_at !== "Invalid Date" ? updated_at.slice(4, 15) : "NA"}
 						</small>
 					</span>
@@ -113,7 +113,7 @@ const updated_at = new Date((await GithubProfile()).updated_at).toDateString();
 						</div>
 						<small class="font-normal">
 							<u class="block md:hidden">Last Solved</u>
-							<span class="hidden md:inline">Last Solved:</span>
+							<u class="hidden md:inline">Last Solved:</u>
 							{
 								new Date(
 									parseInt(leetcode.recentSubmissionList?.at(0)?.timestamp!) *
@@ -134,7 +134,7 @@ const updated_at = new Date((await GithubProfile()).updated_at).toDateString();
 						</div>
 						<small class="font-normal">
 							<u class="block md:hidden">Last Posted</u>
-							<span class="hidden md:inline">Last Posted:</span>
+							<u class="hidden md:inline">Last Posted:</u>
 							{blog.at(0)?.data.created.toDateString().slice(4, 15)}
 						</small>
 					</span>
