fix: image aspect ratio

--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -52,7 +52,7 @@ posts = posts.filter((acc) => acc.data.draft !== true);
 							height={1080}
 							decoding={"async"}
 							loading={"eager"}
-							class="-my-px aspect-auto w-full border border-border ~rounded-none/xl"
+							class="-my-px aspect-video w-full border border-border ~rounded-none/xl"
 							transition:name="image"
 						/>
 					</div>
