fix: footer links

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -34,7 +34,9 @@ import A from "@/components/A.astro";
 		>
 			Naparajith T L
 		</A>.
-		<!-- <A href={"/policy"} title={"Site Policy"}>Policy</A> -->
+	</p>
+	<p class="text-pretty text-center ~space-x-2/4">
+		<A href={"/policy"} title={"Site Policies"}>Site Policies</A>
 		<A href={"/license"} title={"License"}>License</A>
 		<A href={"/contact"} title={"contact"}>Contact</A>
 	</p>
