--- a/src/pages/quick-view/github.astro
+++ b/src/pages/quick-view/github.astro
@@ -22,7 +22,10 @@
 
 import Layout from "@/layouts/Layout.astro";
 import { GithubRepositories } from "@/actions/github/repositories.ts";
+import { GithubProfile } from "@/actions/github-profile";
 import A from "@/components/A.astro";
+
+const github = await GithubProfile();
 const result = await GithubRepositories();
 ---
 
@@ -31,6 +34,40 @@ const result = await GithubRepositories();
 	description="A quick overview of my leetcode stats, directly from the source"
 >
 	<main>
+		<A
+			href={github.html_url}
+			title="LeetCode Profile"
+			target={"_blank"}
+			css={"~text-xl/5xl"}
+		>
+			{github.login}
+		</A>
+		<p>{github.bio}</p>
+		<h2>Overview</h2>
+		<div class="~space-y-4/8">
+			<div
+				class="flex flex-wrap justify-evenly border border-border ~gap-2/4 ~rounded-none/xl ~p-2/4"
+			>
+				<span>Repositories: <strong>{github.public_repos}</strong></span>
+				<span>Followers: <strong>{github.followers}</strong></span>
+				<span>Following: <strong>{github.following}</strong></span>
+			</div>
+			<div
+				class="flex flex-wrap justify-evenly border border-border ~gap-2/4 ~rounded-none/xl ~p-2/4"
+			>
+				<span
+					>Created On: <strong
+						>{new Date(github.created_at).toDateString()}</strong
+					></span
+				>
+				<span
+					>Updated On: <strong
+						>{new Date(github.updated_at).toDateString()}</strong
+					></span
+				>
+			</div>
+		</div>
+
 		<h2>Repositories</h2>
 		{
 			result.map((repo) => (
