fix: updated internal github links

--- a/src/pages/contact/index.astro
+++ b/src/pages/contact/index.astro
@@ -54,8 +54,8 @@ import Layout from "@/layouts/Layout.astro";
 			</span>
 			<span>
 				<A
-					href={"https://github.com/DrInfinite"}
-					title={`GitHub - DrInfinite`}
+					href="/quick-view/github"
+					title="GitHub - DrInfinite"
 					target="_blank"
 				>
 					GitHub
