--- a/src/pages/profile/index.astro
+++ b/src/pages/profile/index.astro
@@ -183,8 +183,8 @@ const translations = [
 			</span>
 			<span>
 				<A
-					href={"https://github.com/DrInfinite"}
-					title={`GitHub - DrInfinite`}
+					href="/quick-view/github"
+					title="GitHub - DrInfinite"
 					target="_blank"
 				>
 					GitHub
