--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -94,11 +94,7 @@ const quote = quotes[Math.floor(Math.random() * quotes.length)];
 		<A href="/contact" title="Contact"> Contact </A>
 		<A href="/blog" title="Blog">Blog</A>
 		<!-- <A href="/quotes" title="Quotes">Quotes</A> -->
-		<A
-			href={"https://github.com/DrInfinite"}
-			title={`GitHub - DrInfinite`}
-			target="_blank"
-		>
+		<A href="/quick-view/github" title="GitHub - DrInfinite" target="_blank">
 			GitHub
 		</A>
 		<A
