--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -59,13 +59,13 @@ const quote = quotes[Math.floor(Math.random() * quotes.length)];
 		>
 			<span class="-my-px ~size-48/96">
 				<Image
-					alt={"DrInfinite"}
+					alt="DrInfinite"
 					class="mx-auto scale-90 ~rounded-none/xl"
 					width={540}
 					height={540}
-					decoding={"async"}
-					loading={"eager"}
-					src={"https://avatars.githubusercontent.com/u/74095696?v=4"}
+					decoding="async"
+					loading="eager"
+					src="https://avatars.githubusercontent.com/u/74095696?v=4"
 				/>
 			</span>
 
@@ -105,8 +105,8 @@ const quote = quotes[Math.floor(Math.random() * quotes.length)];
 			LinkedIn
 		</A>
 		<A
-			href={"https://bsky.app/profile/naparajith.in"}
-			title={`Naparajith | DrInfinite (@naparajith.in)`}
+			href="https://bsky.app/profile/naparajith.in"
+			title="Naparajith | DrInfinite (@naparajith.in)"
 			target="_blank"
 		>
 			BlueSky
@@ -117,7 +117,7 @@ const quote = quotes[Math.floor(Math.random() * quotes.length)];
 			<A
 				href="https://flowcv.com/resume/mdrssqq018"
 				title="Resume"
-				target={"_blank"}
+				target="_blank"
 			>
 				Resume: Download latest version
 			</A>
