--- a/src/pages/profile/index.astro
+++ b/src/pages/profile/index.astro
@@ -191,14 +191,14 @@ const translations = [
 				</A>
 			</span>
 			<span>
-				<A href={"/quick-view/leetcode"} title={`LeetCode`} target="_blank">
+				<A href="/quick-view/leetcode" title="LeetCode" target="_blank">
 					LeetCode
 				</A>
 			</span>
 			<span>
 				<A
-					href={"https://bsky.app/profile/naparajith.in"}
-					title={`Naparajith | DrInfinite (@naparajith.in)`}
+					href="https://bsky.app/profile/naparajith.in"
+					title="Naparajith | DrInfinite (@naparajith.in)"
 					target="_blank"
 				>
 					BlueSky
