fix: removed target blanks from github links

--- a/src/pages/contact/index.astro
+++ b/src/pages/contact/index.astro
@@ -53,13 +53,7 @@ import Layout from "@/layouts/Layout.astro";
 				</A>
 			</span>
 			<span>
-				<A
-					href="/quick-view/github"
-					title="GitHub - DrInfinite"
-					target="_blank"
-				>
-					GitHub
-				</A>
+				<A href="/quick-view/github" title="GitHub - DrInfinite"> GitHub </A>
 			</span>
 			<span>
 				<A
