--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -94,9 +94,7 @@ const quote = quotes[Math.floor(Math.random() * quotes.length)];
 		<A href="/contact" title="Contact"> Contact </A>
 		<A href="/blog" title="Blog">Blog</A>
 		<!-- <A href="/quotes" title="Quotes">Quotes</A> -->
-		<A href="/quick-view/github" title="GitHub - DrInfinite" target="_blank">
-			GitHub
-		</A>
+		<A href="/quick-view/github" title="GitHub - DrInfinite"> GitHub </A>
 		<A
 			href="https://www.linkedin.com/in/naparajith/"
 			title="LinkedIn - Naparajith T L"
