--- a/src/pages/profile/index.astro
+++ b/src/pages/profile/index.astro
@@ -182,13 +182,7 @@ const translations = [
 				</A>
 			</span>
 			<span>
-				<A
-					href="/quick-view/github"
-					title="GitHub - DrInfinite"
-					target="_blank"
-				>
-					GitHub
-				</A>
+				<A href="/quick-view/github" title="GitHub - DrInfinite"> GitHub </A>
 			</span>
 			<span>
 				<A href="/quick-view/leetcode" title="LeetCode" target="_blank">
